reverse calender lines + add archive + update calendar

--- a/index.html
+++ b/index.html
@@ -49,49 +49,48 @@
 					<p>Van een gezellig afspraak op de opendeurdag tot een volwaardig kamp met alles erop en eraan... oudscouts Parsival zit niet stil. </p>
 
 					<ul>
-						<li class="past"><a href="https://plus.google.com/events/c6dkjg7q80ds6k94bmur7uda6j8">11-13/10/2013 | Parsival Opendeurdagen</a></li>
-						<li class="past"><a href="https://plus.google.com/events/ccmbosa57e2q7cl7ql5b2i0chss">10/11/2013 | Tuinhuizentocht - 6de editie</a></li>
-						<li class="past"><a href="https://plus.google.com/events/c8sfmhchuj2n54vpadq0i97aoqg">23-24/11/2013 | Parsival Mosselfeest</a></li>
-						<li class="past"><a href="https://plus.google.com/events/cp2558mvu8a9hu3fneu5i93kt3g">13/12/2013 | Etentje Atlas (met Quinten & Bart?)</a></li>
-						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cl4vl5mma2i8dmkpc3oscirqe5c">31/12/2013 | Oud op nieuw viering</a></li>
-						<li class="past"><a
-href="https://plus.google.com/u/0/b/103890813912672931897/events/cn15nutq2j2k4k9avqu7qfdckrs">02/01/2013 | Scoutsdropping Kerststal</a></li>
-						<li class="past"><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
-						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cplhovcvm2ees6j7t1n1o5ngi6c">23/01/2014 | Gekochte
-repititie Fanfare</a></li>
-						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/c7euktldepmrggnh8pe5om5ivl4">30/01/2014 | 2de
-Gekochte repititie Fanfare</a></li>
-						<li class="past"><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
-						<li class="past"><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
-						<li class="past"><a href="https://plus.google.com/events/clhikt2fvdpeprcnb1tnvordrg8">30/3/2014 | Target-game Mechelen</a></li>
-						<li class="past"><a href="https://plus.google.com/events/c6t9rqkb2kv1uq8a7ggvl76cjkk">12/4/2014 | Osse-Techniekenwandeling</a></li>
-						<li class="past"><a href="https://plus.google.com/events/chddi6uc4irgs2loivp8ablsa9o">27/4/2014 | Parsival - Ouderdag 2014</a></li>
-						<li class="past"><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">5-8/6/2014 | Zomeroffensief - 70jaar D-day</a></li>
-						<li class="past"><a href="https://plus.google.com/events/cueh0vcpsilljr54d7pm0u9s14c">19/6/2014 | Algemene ledenvergadering</a></li>
-						<li class="past"><a href="https://plus.google.com/events/c5956j22762q3pntm86ptjoq0bg">8-14/8/2014 | OudScouts Kamp</a></li>
-						<li class="past"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">5-7/9/2014 | DOS Weekend - episode VI</a></li>
-						<li class="past"><a href="https://plus.google.com/events/c5tknctud1c1qdetbr74bp6ho14">12-14/9/2014 | Charettenweekend</a></li>
+           				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+			            <li class="future"><a href="https://plus.google.com/events/c9hq3i538d6so517qrg9dd57adg">7/3/2015 | Lentedans 2015</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/csu8st32rdju5teknjjhsj8m090">21-22/2/2015 | L(uxe) O(ud) S(couts) weekend</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/co51jpkvp5ulqv3nkgdtkvatbvk">30/1-1/2/2015 | Winteroffensief 2015</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/c5okav16hv2kh6uumg9ot6eokg0">22/01/2015 | 2de Gekochte repititie Fanfare</a></li>
+						<li class="future"><a href="https://plus.google.com/events/coh1ov14ea8q240hb43jep7acok">29/01/2015 | Gekochte repititie Fanfare</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/c50jjb9kidt0v7n1nuhvet5aksk">11/1/2015 | Nieuwjaarsreceptie</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/c2pjth7pobtm45hi6japsh7bl5o">31/12/2014 | Oud op Nieuw</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/cnscifnodp11mua197edhetin40">21/12/2014 | VT-dropping + Giver Winter BBQ</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/cueo3phmmn766u8fm97hboeqlv4">1/12/2014 | Info-vergadering Nieuwbouw Parsival</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/cvo8is7tf1i3ib1991dijsggckc">22-23/11/2014 | Parsival Mosselfeest</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/cvfrnmjn0i14ff0q6go9cm645e0">9/11/2014 | Tuinhuizentocht - 7de editie</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/cae828u7o3qp6uljrfogi09v9t0">6/11/2014 | @ the movies: "Welp"</a></li>
 						<li class="past"><a href="https://plus.google.com/events/craut0f4n8683bnnm5tio8ki8ok">10-12/10/2014 | Parsival Opendeurdagen</a></li>
-            <li class="past"><a href="https://plus.google.com/events/cae828u7o3qp6uljrfogi09v9t0">6/11/2014 | @ the movies: "Welp"</a></li>
-            <li class="past"><a href="https://plus.google.com/events/cvfrnmjn0i14ff0q6go9cm645e0">9/11/2014 | Tuinhuizentocht - 7de editie</a></li>
-            <li class="past"><a href="https://plus.google.com/events/cvo8is7tf1i3ib1991dijsggckc">22-23/11/2014 | Parsival Mosselfeest</a></li>
-            <li class="future"><a href="https://plus.google.com/events/cueo3phmmn766u8fm97hboeqlv4">1/12/2014 | Info-vergadering Nieuwbouw Parsival</a></li>
-            <li class="future"><a href="https://plus.google.com/events/cnscifnodp11mua197edhetin40">21/12/2014 | VT-dropping + Giver Winter BBQ</a></li>
-            <li class="future"><a href="https://plus.google.com/events/c2pjth7pobtm45hi6japsh7bl5o">31/12/2014 | Oud op Nieuw</a></li>
-            <li class="future"><a href="https://plus.google.com/events/c50jjb9kidt0v7n1nuhvet5aksk">11/1/2015 | Nieuwjaarsreceptie</a></li>
-            <li class="future"><a href="https://plus.google.com/events/co51jpkvp5ulqv3nkgdtkvatbvk">30/1-1/2/2015 | Winteroffensief 2015</a></li>
-            <li class="future"><a href="https://plus.google.com/events/csu8st32rdju5teknjjhsj8m090">21-22/2/2015 | L(uxe) O(ud) S(couts) weekend</a></li>
-            <li class="future"><a href="https://plus.google.com/events/c9hq3i538d6so517qrg9dd57adg">7/3/2015 | Lentedans 2015</a></li>
-            <!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
 					</ul>
 
 					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
 
-<!-- 					<h3>Archief</h3>
+ 					<h3>Archief</h3>
 					<ul>
-						<li><a href="https://plus.google.com/events/c0ihgvr6jg2n342ugj7jcn4g5qc">13-16/9/2013 | Charettenweekend 2013</a></li>
+						<li class="past"><a href="https://plus.google.com/events/c5tknctud1c1qdetbr74bp6ho14">12-14/9/2014 | Charettenweekend</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">5-7/9/2014 | DOS Weekend - episode VI</a></li>
+						<li class="past"><a href="https://plus.google.com/events/c5956j22762q3pntm86ptjoq0bg">8-14/8/2014 | OudScouts Kamp</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cueh0vcpsilljr54d7pm0u9s14c">19/6/2014 | Algemene ledenvergadering</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cn845jeka0b1nt0qmcq60j3tpds">5-8/6/2014 | Zomeroffensief - 70jaar D-day</a></li>
+						<li class="past"><a href="https://plus.google.com/events/chddi6uc4irgs2loivp8ablsa9o">27/4/2014 | Parsival - Ouderdag 2014</a></li>
+						<li class="past"><a href="https://plus.google.com/events/c6t9rqkb2kv1uq8a7ggvl76cjkk">12/4/2014 | Osse-Techniekenwandeling</a></li>
+						<li class="past"><a href="https://plus.google.com/events/clhikt2fvdpeprcnb1tnvordrg8">30/3/2014 | Target-game Mechelen</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/c7euktldepmrggnh8pe5om5ivl4">30/01/2014 | 2de Gekochte repititie Fanfare</a></li>
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cplhovcvm2ees6j7t1n1o5ngi6c">23/01/2014 | Gekochte repititie Fanfare</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cn15nutq2j2k4k9avqu7qfdckrs">02/01/2013 | Scoutsdropping Kerststal</a></li>
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cl4vl5mma2i8dmkpc3oscirqe5c">31/12/2013 | Oud op nieuw viering</a></li>
+						<li class="past"><a href="https://plus.google.com/events/cp2558mvu8a9hu3fneu5i93kt3g">13/12/2013 | Etentje Atlas (met Quinten & Bart?)</a></li>
+						<li class="past"><a href="https://plus.google.com/events/c8sfmhchuj2n54vpadq0i97aoqg">23-24/11/2013 | Parsival Mosselfeest</a></li>
+						<li class="past"><a href="https://plus.google.com/events/ccmbosa57e2q7cl7ql5b2i0chss">10/11/2013 | Tuinhuizentocht - 6de editie</a></li>
+						<li class="past"><a href="https://plus.google.com/events/c6dkjg7q80ds6k94bmur7uda6j8">11-13/10/2013 | Parsival Opendeurdagen</a></li>
+						<li class="past"><a href="https://plus.google.com/events/c0ihgvr6jg2n342ugj7jcn4g5qc">13-16/9/2013 | Charettenweekend 2013</a></li>
 					</ul>
- -->
+ 
 					<aside>
 						<p>Alle activiteiten hebben een vrijblijvend karakter (er is dus geen enkele verplichting). Voor de activiteiten die we zelf organiseren (weekends, kamp, e.d.) vragen we wel een <a href="#lidmaatschap" onclick="_gaq.push(['_trackPageview' ,'#lidmaatschap']);">volwaardig lidmaatschap</a>.  Maar je zal eveneens dingen terugvinden die voor iedereen bedoeld zijn (vb. de jaarlijkse Parsival-opendeurdag)</p>
 					</aside>
