--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 			            <li class="future"><a href="https://plus.google.com/events/c9hq3i538d6so517qrg9dd57adg">7/3/2015 | Lentedans 2015</a></li>
 			            <li class="future"><a href="https://plus.google.com/events/csu8st32rdju5teknjjhsj8m090">21-22/2/2015 | L(uxe) O(ud) S(couts) weekend</a></li>
 			            <li class="future"><a href="https://plus.google.com/events/co51jpkvp5ulqv3nkgdtkvatbvk">30/1-1/2/2015 | Winteroffensief 2015</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/c5okav16hv2kh6uumg9ot6eokg0">22/01/2015 | 2de Gekochte repititie Fanfare</a></li>
-						<li class="future"><a href="https://plus.google.com/events/coh1ov14ea8q240hb43jep7acok">29/01/2015 | Gekochte repititie Fanfare</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/c5okav16hv2kh6uumg9ot6eokg0">22/01/2015 | 2de Gekochte repetitie Fanfare</a></li>
+						<li class="future"><a href="https://plus.google.com/events/coh1ov14ea8q240hb43jep7acok">29/01/2015 | Gekochte repetitie Fanfare</a></li>
 			            <li class="future"><a href="https://plus.google.com/events/c50jjb9kidt0v7n1nuhvet5aksk">11/1/2015 | Nieuwjaarsreceptie</a></li>
 			            <li class="future"><a href="https://plus.google.com/events/c2pjth7pobtm45hi6japsh7bl5o">31/12/2014 | Oud op Nieuw</a></li>
 			            <li class="future"><a href="https://plus.google.com/events/cnscifnodp11mua197edhetin40">21/12/2014 | VT-dropping + Giver Winter BBQ</a></li>
@@ -79,8 +79,8 @@
 						<li class="past"><a href="https://plus.google.com/events/clhikt2fvdpeprcnb1tnvordrg8">30/3/2014 | Target-game Mechelen</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cm3k4mea9oueldsq9ikjkdsduuk">1/3/2014 | Lentedans 2014</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cd9urnquesehmrfohh96vr3krcg">31/1-2/2/2014 | Winteroffensief 2014</a></li>
-						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/c7euktldepmrggnh8pe5om5ivl4">30/01/2014 | 2de Gekochte repititie Fanfare</a></li>
-						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cplhovcvm2ees6j7t1n1o5ngi6c">23/01/2014 | Gekochte repititie Fanfare</a></li>
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/c7euktldepmrggnh8pe5om5ivl4">30/01/2014 | 2de Gekochte repetitie Fanfare</a></li>
+						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cplhovcvm2ees6j7t1n1o5ngi6c">23/01/2014 | Gekochte repetitie Fanfare</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cl4vl5mma2i8dmkpc3oscirqe5c">12/01/2014 | Nieuwjaarsreceptie</a></li>
 						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cn15nutq2j2k4k9avqu7qfdckrs">02/01/2013 | Scoutsdropping Kerststal</a></li>
 						<li class="past"><a href="https://plus.google.com/u/0/b/103890813912672931897/events/cl4vl5mma2i8dmkpc3oscirqe5c">31/12/2013 | Oud op nieuw viering</a></li>
