--- a/index.html
+++ b/index.html
@@ -50,14 +50,18 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+			            <li class="future"><a href="https://plus.google.com/events/cqoldb7b32a82n31jt9tqpu0tik">4-6/9/2015 | Charettenweekend</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/codorcskhgl56pok9sat14pf56c">5-10/8/2015 | Oudscouts Kamp</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/cg6b2nsu8va194gkuqnl0bubudo">19-21/6/2015 | Zomeroffensief 2015</a></li>
+			            <li class="future"><a href="https://plus.google.com/events/c142tl8js9raqgvcvgalto2ukk4">10/5/2015 | Strandkarrenrace</a></li>
 			            <li class="future"><a href="https://plus.google.com/events/c9hq3i538d6so517qrg9dd57adg">7/3/2015 | Lentedans 2015</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/csu8st32rdju5teknjjhsj8m090">21-22/2/2015 | L(uxe) O(ud) S(couts) weekend</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/co51jpkvp5ulqv3nkgdtkvatbvk">30/1-1/2/2015 | Winteroffensief 2015</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/c5okav16hv2kh6uumg9ot6eokg0">22/01/2015 | 2de Gekochte repetitie Fanfare</a></li>
-						<li class="future"><a href="https://plus.google.com/events/coh1ov14ea8q240hb43jep7acok">29/01/2015 | Gekochte repetitie Fanfare</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/c50jjb9kidt0v7n1nuhvet5aksk">11/1/2015 | Nieuwjaarsreceptie</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/c2pjth7pobtm45hi6japsh7bl5o">31/12/2014 | Oud op Nieuw</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/cnscifnodp11mua197edhetin40">21/12/2014 | VT-dropping + Giver Winter BBQ</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/csu8st32rdju5teknjjhsj8m090">21-22/2/2015 | L(uxe) O(ud) S(couts) weekend</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/co51jpkvp5ulqv3nkgdtkvatbvk">30/1-1/2/2015 | Winteroffensief 2015</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/c5okav16hv2kh6uumg9ot6eokg0">22/01/2015 | 2de Gekochte repetitie Fanfare</a></li>
+						<li class="past"><a href="https://plus.google.com/events/coh1ov14ea8q240hb43jep7acok">29/01/2015 | Gekochte repetitie Fanfare</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/c50jjb9kidt0v7n1nuhvet5aksk">11/1/2015 | Nieuwjaarsreceptie</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/c2pjth7pobtm45hi6japsh7bl5o">31/12/2014 | Oud op Nieuw</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/cnscifnodp11mua197edhetin40">21/12/2014 | VT-dropping + Giver Winter BBQ</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/cueo3phmmn766u8fm97hboeqlv4">1/12/2014 | Info-vergadering Nieuwbouw Parsival</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/cvo8is7tf1i3ib1991dijsggckc">22-23/11/2014 | Parsival Mosselfeest</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/cvfrnmjn0i14ff0q6go9cm645e0">9/11/2014 | Tuinhuizentocht - 7de editie</a></li>
