--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
 		<!-- G+ Post Embed: Place this tag in your head or just before your close body tag. -->
 		<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
+		<!-- Hotjar Tracking Code (http://www.hotjar.com) -->
+		<script>
+		    (function(f,b){
+		        var c;
+		        f.hj=f.hj||function(){(f.hj.q=f.hj.q||[]).push(arguments)};
+		        f._hjSettings={hjid:17288, hjsv:3};
+		        c=b.createElement("script");c.async=1;
+		        c.src="//static.hotjar.com/c/hotjar-17288.js?sv=3";
+		        b.getElementsByTagName("head")[0].appendChild(c); 
+		    })(window,document);
+		</script>
+
 	</head>
     <body>
         <!--[if lt IE 7]>
