--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			            <li class="future"><a href="https://plus.google.com/events/codorcskhgl56pok9sat14pf56c">5-10/8/2015 | Oudscouts Kamp</a></li>
 			            <li class="future"><a href="https://plus.google.com/events/cg6b2nsu8va194gkuqnl0bubudo">19-21/6/2015 | Zomeroffensief 2015</a></li>
 			            <li class="future"><a href="https://plus.google.com/events/c142tl8js9raqgvcvgalto2ukk4">10/5/2015 | Strandkarrenrace</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/c9hq3i538d6so517qrg9dd57adg">7/3/2015 | Lentedans 2015</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/c9hq3i538d6so517qrg9dd57adg">7/3/2015 | Lentedans 2015</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/csu8st32rdju5teknjjhsj8m090">21-22/2/2015 | L(uxe) O(ud) S(couts) weekend</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/co51jpkvp5ulqv3nkgdtkvatbvk">30/1-1/2/2015 | Winteroffensief 2015</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/c5okav16hv2kh6uumg9ot6eokg0">22/01/2015 | 2de Gekochte repetitie Fanfare</a></li>
