--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+			            <li class="future"><a href="https://plus.google.com/events/c2rvajb3e8lghdrbhn4iv05g2cg">9-11/10/2015 | Parsival Knalt!</a></li>
 			            <li class="future"><a href="https://plus.google.com/events/cqoldb7b32a82n31jt9tqpu0tik">4-6/9/2015 | Charettenweekend</a></li>
 			            <li class="future"><a href="https://plus.google.com/events/codorcskhgl56pok9sat14pf56c">5-10/8/2015 | Oudscouts Kamp</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/cg6b2nsu8va194gkuqnl0bubudo">19-21/6/2015 | Zomeroffensief 2015</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/cdhmqd9no2km3e6ej3gahej0si4">28/5/2015 | Algemene ledenvergadering</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/cg6b2nsu8va194gkuqnl0bubudo">19-21/6/2015 | Zomeroffensief 2015</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/cdhmqd9no2km3e6ej3gahej0si4">28/5/2015 | Algemene ledenvergadering</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/c142tl8js9raqgvcvgalto2ukk4">10/5/2015 | Strandkarrenrace</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/c9hq3i538d6so517qrg9dd57adg">7/3/2015 | Lentedans 2015</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/csu8st32rdju5teknjjhsj8m090">21-22/2/2015 | L(uxe) O(ud) S(couts) weekend</a></li>
