--- a/index.html
+++ b/index.html
@@ -62,9 +62,20 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
-			            <li class="future"><a href="https://plus.google.com/events/c2rvajb3e8lghdrbhn4iv05g2cg">9-11/10/2015 | Parsival Knalt!</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/cqoldb7b32a82n31jt9tqpu0tik">4-6/9/2015 | Charettenweekend</a></li>
-			            <li class="future"><a href="https://plus.google.com/events/codorcskhgl56pok9sat14pf56c">5-10/8/2015 | Oudscouts Kamp</a></li>
+           				<li class="past|present|future"><a href="https://plus.google.com/events/cq6utqhoj3hret04ipcejm5h9qo">20-21/2/2016 | L(uxe) O(ud) S(couts) weekend</a></li>
+           				<li class="past|present|future"><a href="https://plus.google.com/events/c5onk9as84kjhvndo8643dr04v8">29-31/1/2016 | Winteroffensief 2016</a></li>
+           				<li class="past|present|future"><a href="https://plus.google.com/events/c7ni9et9petaga6n7g9p3s652l4">10/1/2016 | Nieuwjaarsreceptie</a></li>
+           				<li class="past|present|future"><a href="https://plus.google.com/events/ca5s8mn3sdreea5njls4q44uabo">28-29/11/2015 | Parsival Mosselfeest</a></li>
+           				<li class="past|present|future"><a href="https://plus.google.com/events/cthk2p82ahm4q37n1ei6tjk9030">8/11/2015 | Tuinhuizentocht - 8ste editie</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/c2rvajb3e8lghdrbhn4iv05g2cg">9-11/10/2015 | Parsival Knalt!</a></li>
+					</ul>
+
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
+
+ 					<h3>Archief</h3>
+					<ul>
+						<li class="past"><a href="https://plus.google.com/events/cqoldb7b32a82n31jt9tqpu0tik">4-6/9/2015 | Charettenweekend</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/codorcskhgl56pok9sat14pf56c">5-10/8/2015 | Oudscouts Kamp</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/cg6b2nsu8va194gkuqnl0bubudo">19-21/6/2015 | Zomeroffensief 2015</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/cdhmqd9no2km3e6ej3gahej0si4">28/5/2015 | Algemene ledenvergadering</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/c142tl8js9raqgvcvgalto2ukk4">10/5/2015 | Strandkarrenrace</a></li>
@@ -81,12 +92,6 @@
 			            <li class="past"><a href="https://plus.google.com/events/cvfrnmjn0i14ff0q6go9cm645e0">9/11/2014 | Tuinhuizentocht - 7de editie</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/cae828u7o3qp6uljrfogi09v9t0">6/11/2014 | @ the movies: "Welp"</a></li>
 						<li class="past"><a href="https://plus.google.com/events/craut0f4n8683bnnm5tio8ki8ok">10-12/10/2014 | Parsival Opendeurdagen</a></li>
-					</ul>
-
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
-
- 					<h3>Archief</h3>
-					<ul>
 						<li class="past"><a href="https://plus.google.com/events/c5tknctud1c1qdetbr74bp6ho14">12-14/9/2014 | Charettenweekend</a></li>
 						<li class="past"><a href="https://plus.google.com/events/cvp5mn54o0tc81khn91ljoea518">5-7/9/2014 | DOS Weekend - episode VI</a></li>
 						<li class="past"><a href="https://plus.google.com/events/c5956j22762q3pntm86ptjoq0bg">8-14/8/2014 | OudScouts Kamp</a></li>
