--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
-           				<li class="past|present|future"><a href="https://plus.google.com/events/cq6utqhoj3hret04ipcejm5h9qo">20-21/2/2016 | L(uxe) O(ud) S(couts) weekend</a></li>
-           				<li class="past|present|future"><a href="https://plus.google.com/events/c5onk9as84kjhvndo8643dr04v8">29-31/1/2016 | Winteroffensief 2016</a></li>
-           				<li class="past|present|future"><a href="https://plus.google.com/events/c7ni9et9petaga6n7g9p3s652l4">10/1/2016 | Nieuwjaarsreceptie</a></li>
-           				<li class="past|present|future"><a href="https://plus.google.com/events/ca5s8mn3sdreea5njls4q44uabo">28-29/11/2015 | Parsival Mosselfeest</a></li>
-           				<li class="past|present|future"><a href="https://plus.google.com/events/cthk2p82ahm4q37n1ei6tjk9030">8/11/2015 | Tuinhuizentocht - 8ste editie</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/cq6utqhoj3hret04ipcejm5h9qo">20-21/2/2016 | L(uxe) O(ud) S(couts) weekend</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/ca60nv046cseqonoph7e5vves84">4/2/2016 | 2de Gekochte repetitie Fanfare</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c5onk9as84kjhvndo8643dr04v8">29-31/1/2016 | Winteroffensief 2016</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c88qdos6vpp20a3r9td5aq6mins">28/1/2016 | 1ste Gekochte repetitie Fanfare</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c7ni9et9petaga6n7g9p3s652l4">10/1/2016 | Nieuwjaarsreceptie</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/ca5s8mn3sdreea5njls4q44uabo">28-29/11/2015 | Parsival Mosselfeest</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/cthk2p82ahm4q37n1ei6tjk9030">8/11/2015 | Tuinhuizentocht - 8ste editie</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/c2rvajb3e8lghdrbhn4iv05g2cg">9-11/10/2015 | Parsival Knalt!</a></li>
 					</ul>
 
