--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
            				<li class="future"><a href="https://plus.google.com/events/c5kli97hn6ahik3l43bpv7btaf8">7-9/10/2016 | Parsival KNALT!</a></li>
            				<li class="future"><a href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | Charettenweekend</a></li>
            				<li class="future"><a href="https://plus.google.com/events/ce4hfvtjji5pmqadosks5nbs1n8">5-11/8/2016 | OS kamp 2016</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cnr4jlifetbqg6kd1ci6s83jr8k?authkey=CNjqy4HsjMSjZQ">Live Stream - EK2016 België Italië</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/cnr4jlifetbqg6kd1ci6s83jr8k?authkey=CNjqy4HsjMSjZQ">13/6/2016 | Live Stream - EK2016 België Italië</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cin2n2lccnohtfajee1i2ih1jms">4/6/2016 | Vosog - Proviciale wandelrally</a></li>
            				<li class="past"><a href="https://plus.google.com/events/chf0e1ki7feaacfkeo1k2b9dls4">27-29/5/2016 | Zomeroffensief 2016</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cfs0o5ah0v290f27p7vvci678a4">5/3/2016 | Lentedans 2016</a></li>
