--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+           				<li class="past|present|future"><a href="https://plus.google.com/events/c8k2bu8l5bugau6mnp76t883o2s">10/6/2017 | DCM Slagerfestival ism Parsival</a></li> 
            				<li class="future"><a href="https://plus.google.com/events/cmmv1d0r1u3aasapniqhh1c604o">11-12/3/2017 | L(uxe) O(ud) S(couts) weekend</a></li>
+           				<li class="past|present|future"><a href="https://plus.google.com/events/cfpsue6l2j4i2mi27arku0hae4k">27-29/1/2017 | Winteroffensief 2017</a></li> 
+           				<li class="past|present|future"><a href="https://plus.google.com/events/ce7e6b17l24u87kajsvtbtjvisk">26-27/11/2016 | Parsival Mosselfeest</a></li> 
+           				<li class="future"><a href="https://plus.google.com/events/c30ktk6m73iqk5873pqufm6orsg">13/11/2016 | Fietstocht - 9de editie</a></li>
            				<li class="future"><a href="https://plus.google.com/events/c5kli97hn6ahik3l43bpv7btaf8">7-9/10/2016 | Parsival KNALT!</a></li>
            				<li class="future"><a href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | Charettenweekend</a></li>
            				<li class="future"><a href="https://plus.google.com/events/ce4hfvtjji5pmqadosks5nbs1n8">5-11/8/2016 | OS kamp 2016</a></li>
