update kalender events

--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
            				<li class="future"><a href="https://plus.google.com/events/c8k2bu8l5bugau6mnp76t883o2s">10/6/2017 | DCM Slagerfestival ism Parsival</a></li> 
            				<li class="future"><a href="https://plus.google.com/events/cmmv1d0r1u3aasapniqhh1c604o">11-12/3/2017 | L(uxe) O(ud) S(couts) weekend</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cfpsue6l2j4i2mi27arku0hae4k">27-29/1/2017 | Winteroffensief 2017</a></li> 
-           				<li class="future"><a href="https://plus.google.com/events/ce7e6b17l24u87kajsvtbtjvisk">26-27/11/2016 | Parsival Mosselfeest</a></li> 
-           				<li class="future"><a href="https://plus.google.com/events/c30ktk6m73iqk5873pqufm6orsg">13/11/2016 | Fietstocht - 9de editie</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/ci90d4bs78j3119q8u8671p28ig">2/2/2017 | 2de Gekochte repititie Fanfare</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/cfpsue6l2j4i2mi27arku0hae4k">27-29/1/2017 | Winteroffensief 2017</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c833tfbbm0erporva2uht2n4o08">26/1/2017 | 1ste Gekochte repititie Fanfare</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c4tg4v9hh8ebstta7uj42movf78">8/1/2017 | Nieuwjaarsreceptie</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/ce7e6b17l24u87kajsvtbtjvisk">26-27/11/2016 | Parsival Mosselfeest</a></li> 
+           				<li class="past"><a href="https://plus.google.com/events/c30ktk6m73iqk5873pqufm6orsg">13/11/2016 | Fietstocht - 9de editie</a></li>
            				<li class="past"><a 
 href="https://plus.google.com/events/c5kli97hn6ahik3l43bpv7btaf8">7-9/10/2016 | Parsival KNALT!</a></li>
            				<li class="past"><a 
