--- a/index.html
+++ b/index.html
@@ -62,13 +62,19 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
-           				<li class="future"><a href="https://plus.google.com/events/c8k2bu8l5bugau6mnp76t883o2s">10/6/2017 | DCM Slagerfestival ism Parsival</a></li> 
-           				<li class="future"><a href="https://plus.google.com/events/cmmv1d0r1u3aasapniqhh1c604o">11-12/3/2017 | L(uxe) O(ud) S(couts) weekend</a></li>
- 					<li class="future"><a href="https://plus.google.com/events/cc8n0uhfuaagv0729rjnpepu97c">4/3/2017 | Lentedans 2017 - Proms Edition</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/ci90d4bs78j3119q8u8671p28ig">2/2/2017 | 2de Gekochte repititie Fanfare</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cfpsue6l2j4i2mi27arku0hae4k">27-29/1/2017 | Winteroffensief 2017</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/c833tfbbm0erporva2uht2n4o08">26/1/2017 | 1ste Gekochte repititie Fanfare</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/c4tg4v9hh8ebstta7uj42movf78">8/1/2017 | Nieuwjaarsreceptie</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c7du91me3ggt2bkspt374525qes">13-15/10/2017 | Parsival KNALT!</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/c3gu2ll37t5e9saa5tlglllnef4">8-10/9/2017 | Charettenweekend 2017</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/cc29j6ulv15dulaigubgcvhgf90">4-10/8/2017 | OS kamp 2017</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/cqesog72vs27j173spjsku8tppo">23/6/2017 | Parsivaliaans Openlucht Popup Zomerterras</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/cejbotf1taf76svc8phgchcp4pc">16-17/6/2017 | Zomeroffensief 2017 (Lite edition)</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/ctp6hb9f52cfsrtsuh43s8rv9ig">27-28/5/2017 | Molenbergfeesten</a></li>
+           				<!--<li class="future"><a href="https://plus.google.com/events/c8k2bu8l5bugau6mnp76t883o2s">10/6/2017 | DCM Slagerfestival ism Parsival</a></li>-->
+           				<li class="past"><a href="https://plus.google.com/events/cmmv1d0r1u3aasapniqhh1c604o">11-12/3/2017 | L(uxe) O(ud) S(couts) weekend</a></li>
+ 						<li class="past"><a href="https://plus.google.com/events/cc8n0uhfuaagv0729rjnpepu97c">4/3/2017 | Lentedans 2017 - Proms Edition</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/ci90d4bs78j3119q8u8671p28ig">2/2/2017 | 2de Gekochte repititie Fanfare</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/cfpsue6l2j4i2mi27arku0hae4k">27-29/1/2017 | Winteroffensief 2017</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c833tfbbm0erporva2uht2n4o08">26/1/2017 | 1ste Gekochte repititie Fanfare</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c4tg4v9hh8ebstta7uj42movf78">8/1/2017 | Nieuwjaarsreceptie</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ce7e6b17l24u87kajsvtbtjvisk">26-27/11/2016 | Parsival Mosselfeest</a></li> 
            				<li class="past"><a href="https://plus.google.com/events/c30ktk6m73iqk5873pqufm6orsg">13/11/2016 | Fietstocht - 9de editie</a></li>
            				<li class="past"><a 
@@ -76,7 +82,13 @@ href="https://plus.google.com/events/c5kli97hn6ahik3l43bpv7btaf8">7-9/10/2016 | 
            				<li class="past"><a 
 href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | Charettenweekend</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ce4hfvtjji5pmqadosks5nbs1n8">5-11/8/2016 | OS kamp 2016</a></li>
-           				<li class="past"><a href="https://plus.google.com/events/cnr4jlifetbqg6kd1ci6s83jr8k?authkey=CNjqy4HsjMSjZQ">13/6/2016 | Live Stream - EK2016 België Italië</a></li>
+					</ul>
+
+					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
+
+ 					<h3>Archief</h3>
+					<ul>
+						<li class="past"><a href="https://plus.google.com/events/cnr4jlifetbqg6kd1ci6s83jr8k?authkey=CNjqy4HsjMSjZQ">13/6/2016 | Live Stream - EK2016 België Italië</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cin2n2lccnohtfajee1i2ih1jms">4/6/2016 | Vosog - Proviciale wandelrally</a></li>
            				<li class="past"><a href="https://plus.google.com/events/chf0e1ki7feaacfkeo1k2b9dls4">27-29/5/2016 | Zomeroffensief 2016</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cfs0o5ah0v290f27p7vvci678a4">5/3/2016 | Lentedans 2016</a></li>
@@ -88,13 +100,7 @@ href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | 
            				<li class="past"><a href="https://plus.google.com/events/ca5s8mn3sdreea5njls4q44uabo">28-29/11/2015 | Parsival Mosselfeest</a></li>
            				<li class="past"><a href="https://plus.google.com/events/cthk2p82ahm4q37n1ei6tjk9030">8/11/2015 | Tuinhuizentocht - 8ste editie</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/c2rvajb3e8lghdrbhn4iv05g2cg">9-11/10/2015 | Parsival Knalt!</a></li>
-					</ul>
-
-					<p><a href="https://plus.google.com/u/0/b/103890813912672931897/events" class="bigbutton">Bekijk het volledige activiteiten overzicht op Google+</a></p>
-
- 					<h3>Archief</h3>
-					<ul>
-						<li class="past"><a href="https://plus.google.com/events/cqoldb7b32a82n31jt9tqpu0tik">4-6/9/2015 | Charettenweekend</a></li>
+			            <li class="past"><a href="https://plus.google.com/events/cqoldb7b32a82n31jt9tqpu0tik">4-6/9/2015 | Charettenweekend</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/codorcskhgl56pok9sat14pf56c">5-10/8/2015 | Oudscouts Kamp</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/cg6b2nsu8va194gkuqnl0bubudo">19-21/6/2015 | Zomeroffensief 2015</a></li>
 			            <li class="past"><a href="https://plus.google.com/events/cdhmqd9no2km3e6ej3gahej0si4">28/5/2015 | Algemene ledenvergadering</a></li>
