calendar status update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		        f._hjSettings={hjid:17288, hjsv:3};
 		        c=b.createElement("script");c.async=1;
 		        c.src="//static.hotjar.com/c/hotjar-17288.js?sv=3";
-		        b.getElementsByTagName("head")[0].appendChild(c); 
+		        b.getElementsByTagName("head")[0].appendChild(c);
 		    })(window,document);
 		</script>
 
@@ -70,8 +70,8 @@
            				<li class="future"><a href="https://plus.google.com/events/c3gu2ll37t5e9saa5tlglllnef4">8-10/9/2017 | Charettenweekend 2017</a></li>
            				<li class="future"><a href="https://plus.google.com/events/cc29j6ulv15dulaigubgcvhgf90">4-10/8/2017 | OS kamp 2017</a></li>
            				<li class="future"><a href="https://plus.google.com/events/cqesog72vs27j173spjsku8tppo">23/6/2017 | Parsivaliaans Openlucht Popup Zomerterras</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cejbotf1taf76svc8phgchcp4pc">16-17/6/2017 | Zomeroffensief 2017 (Lite edition)</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/ctp6hb9f52cfsrtsuh43s8rv9ig">27-28/5/2017 | Molenbergfeesten</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/cejbotf1taf76svc8phgchcp4pc">16-17/6/2017 | Zomeroffensief 2017 (Lite edition)</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/ctp6hb9f52cfsrtsuh43s8rv9ig">27-28/5/2017 | Molenbergfeesten</a></li>
            				<!--<li class="future"><a href="https://plus.google.com/events/c8k2bu8l5bugau6mnp76t883o2s">10/6/2017 | DCM Slagerfestival ism Parsival</a></li>-->
            				<li class="past"><a href="https://plus.google.com/events/cmmv1d0r1u3aasapniqhh1c604o">11-12/3/2017 | L(uxe) O(ud) S(couts) weekend</a></li>
  						<li class="past"><a href="https://plus.google.com/events/cc8n0uhfuaagv0729rjnpepu97c">4/3/2017 | Lentedans 2017 - Proms Edition</a></li>
@@ -79,11 +79,11 @@
            				<li class="past"><a href="https://plus.google.com/events/cfpsue6l2j4i2mi27arku0hae4k">27-29/1/2017 | Winteroffensief 2017</a></li>
            				<li class="past"><a href="https://plus.google.com/events/c833tfbbm0erporva2uht2n4o08">26/1/2017 | 1ste Gekochte repititie Fanfare</a></li>
            				<li class="past"><a href="https://plus.google.com/events/c4tg4v9hh8ebstta7uj42movf78">8/1/2017 | Nieuwjaarsreceptie</a></li>
-           				<li class="past"><a href="https://plus.google.com/events/ce7e6b17l24u87kajsvtbtjvisk">26-27/11/2016 | Parsival Mosselfeest</a></li> 
+           				<li class="past"><a href="https://plus.google.com/events/ce7e6b17l24u87kajsvtbtjvisk">26-27/11/2016 | Parsival Mosselfeest</a></li>
            				<li class="past"><a href="https://plus.google.com/events/c30ktk6m73iqk5873pqufm6orsg">13/11/2016 | Fietstocht - 9de editie</a></li>
-           				<li class="past"><a 
+           				<li class="past"><a
 href="https://plus.google.com/events/c5kli97hn6ahik3l43bpv7btaf8">7-9/10/2016 | Parsival KNALT!</a></li>
-           				<li class="past"><a 
+           				<li class="past"><a
 href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | Charettenweekend</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ce4hfvtjji5pmqadosks5nbs1n8">5-11/8/2016 | OS kamp 2016</a></li>
 					</ul>
@@ -190,11 +190,11 @@ href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | 
 
 							<select name="LASTYEAR" class="lastyear" id="mce-LASTYEAR">
 								<option value="--">Laatste scoutsjaar (jaarthema, kampplaats, kampthema)</option>
-								<option value="--">2016-2017 - Grenzeloos Groeien - ... - ...</option
+								<option value="--">2016-2017 - Grenzeloos Groeien - ... - ...</option>
 								<option value="--">2015-2016 - Be Prepared - Felenne - Circus Parsival</option>
 								<option value="2014-2015">2014-2015 - Tent vol talent - Lessive - Ziekenhuis</option>
-				                <option value="2013-2014">2013-2014 - Spelen bovenal overal - Ethe - Vikings</option>
-				                <option value="2012-2013">2012-2013 - Scouting? Gewoon doen! - Baclain - Het Dorp</option>
+                <option value="2013-2014">2013-2014 - Spelen bovenal overal - Ethe - Vikings</option>
+                <option value="2012-2013">2012-2013 - Scouting? Gewoon doen! - Baclain - Het Dorp</option>
 								<option value="2011-2012">2011-2012 - Armoede is een onrecht. Maak er spel van! - Moyen - Parsival Airlines</option>
 								<option value="2010-2011">2010-2011 - Gloeiend erbij - Villers-Le-Gambon - F.C. Parsival</option>
 								<option value="2009-2010">2009-2010 - Anders getikt - Gérouville - Op een onbewoond eiland</option>
