--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@
 
 					<ul>
            				<!-- <li class="past|present|future"><a href="https://g+href">1/1/2014 | Naam Activiteit</a></li> -->
+           				<li class="future"><a href="https://plus.google.com/events/c92lhnnebn0g5i2sal4jcg9ecro">26-28/1/2018 | Winteroffensief 2018</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/cce5pkt5gna3cehrq6i8f3qsmds">30/11/2017 | Algemene ledenvergadering</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/cn7gogm6v0ftb6oo5fol6rnb788">25-26/11/2017 | Parsival Mosselfeest</a></li>
+           				<li class="future"><a href="https://plus.google.com/events/cb0a3uvop63uegp5o27b8vf6or0">12/11/2017 | Fietstocht - 10de editie</a></li>
            				<li class="future"><a href="https://plus.google.com/events/c7du91me3ggt2bkspt374525qes">13-15/10/2017 | Parsival KNALT!</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/c3gu2ll37t5e9saa5tlglllnef4">8-10/9/2017 | Charettenweekend 2017</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cc29j6ulv15dulaigubgcvhgf90">4-10/8/2017 | OS kamp 2017</a></li>
-           				<li class="future"><a href="https://plus.google.com/events/cqesog72vs27j173spjsku8tppo">23/6/2017 | Parsivaliaans Openlucht Popup Zomerterras</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/c3gu2ll37t5e9saa5tlglllnef4">8-10/9/2017 | Charettenweekend 2017</a></li>
+           				<li class="past"><a href="https://plus.google.com/events/cc29j6ulv15dulaigubgcvhgf90">4-10/8/2017 | OS kamp 2017</a></li>
+           				<!-- <li class="future"><a href="https://plus.google.com/events/cqesog72vs27j173spjsku8tppo">23/6/2017 | Parsivaliaans Openlucht Popup Zomerterras</a></li> -->
            				<li class="past"><a href="https://plus.google.com/events/cejbotf1taf76svc8phgchcp4pc">16-17/6/2017 | Zomeroffensief 2017 (Lite edition)</a></li>
            				<li class="past"><a href="https://plus.google.com/events/ctp6hb9f52cfsrtsuh43s8rv9ig">27-28/5/2017 | Molenbergfeesten</a></li>
            				<!--<li class="future"><a href="https://plus.google.com/events/c8k2bu8l5bugau6mnp76t883o2s">10/6/2017 | DCM Slagerfestival ism Parsival</a></li>-->
