--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@ href="https://plus.google.com/events/c0rk4vbrf3qst8jiqg114f62dik">9-11/9/2016 | 
 
 							<select name="LASTYEAR" class="lastyear" id="mce-LASTYEAR">
 								<option value="--">Laatste scoutsjaar (jaarthema, kampplaats, kampthema)</option>
-								<option value="--">2016-2017 - Grenzeloos Groeien - ... - ...</option>
-								<option value="--">2015-2016 - Be Prepared - Felenne - Circus Parsival</option>
+								<option value="2017-2018">2016-2017 - Allemaal abnormaal - Vesqueville - ...</option>
+								<option value="2016-2017">2016-2017 - Grenzeloos Groeien - Felenne - Teletijdmachine</option>
+								<option value="2015-2016">2015-2016 - Be Prepared - Felenne - Circus Parsival</option>
 								<option value="2014-2015">2014-2015 - Tent vol talent - Lessive - Ziekenhuis</option>
                 <option value="2013-2014">2013-2014 - Spelen bovenal overal - Ethe - Vikings</option>
                 <option value="2012-2013">2012-2013 - Scouting? Gewoon doen! - Baclain - Het Dorp</option>
